@@ -1,3 +1,9 @@
+2010-08-15  David Reveman  <davidr@novell.com>
+
+	* effect.h:
+	* effect.cpp: Move perspective trasform fragment shader into
+	ProjectionEffect class.
+
 2010-08-12  David Reveman  <davidr@novell.com>
 
 	* effect.h: Remove unused user data keys.
